Base methods done

--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -20,3 +20,6 @@ hibernate.jdbc.batch_size=10
 hibernate.order_inserts=true
 hibernate.order_updates=true
 hibernate.jdbc.batch_versioned_data=true
+
+# entity field naming policy
+hibernate.physical_naming_strategy=ru.hh.school.util.CamelCaseToSnakeCaseNamingStrategy
